@@ -14,6 +14,7 @@ eggs = rst2pdf [svgsupport, images, aafiguresupport, tests]
         coverage
         PIL
         pdfrw
+        svg2rlg
 find-links = http://distfiles.minitage.org/public/externals/minitage/
 
 [rst2pdf-rl25]
@@ -27,6 +28,7 @@ eggs = rst2pdf [svgsupport, images, aafiguresupport, tests]
         coverage
         PIL
         pdfrw
+        svg2rlg
 find-links = http://distfiles.minitage.org/public/externals/minitage/
 
 [rst2pdf-rl23]
@@ -40,6 +42,7 @@ eggs = rst2pdf [svgsupport, images, aafiguresupport, tests]
         coverage
         PIL
         pdfrw
+        svg2rlg
 find-links = http://distfiles.minitage.org/public/externals/minitage/
 
 [wordaxe]
