@@ -4,12 +4,12 @@ bad_md5 = [
 ]
 
 good_md5 = [
-        '7caa470ed96254f041d8fe0e9968d587',
         '0d66d57f494504e11d009005c8f235e9',
         '28c67543843fbc947af83bc15eef9751',
+        '7431e632bcb1d337e8f25b557b1fadb0',
+        '7caa470ed96254f041d8fe0e9968d587',
         'd1a9f3894e7d857c82ca73434133542e',
         'e697552e5ce85665e109c45115b2334b',
-        '28c67543843fbc947af83bc15eef9751',
         'sentinel'
 ]
 
