@@ -10,6 +10,7 @@ New in SVN
 * Better support for styling literals.
 * Fixed Issue 454 (Splitting failure)
 * Regressed Issue 374 (some literal blocks get oversplit)
+* Switched from svglib to svg2rlg
 
 New in 0.92
 -----------
